--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/notes/net/jPortConnector.java=UTF-8
+encoding//src/main/projects/macroEditor/MacroEditor.java=UTF-8
